--- a/Assets/Plugins/Android/FirebaseApp.androidlib/res/values/google-services.xml
+++ b/Assets/Plugins/Android/FirebaseApp.androidlib/res/values/google-services.xml
@@ -1,8 +1,8 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:keep="@string/gcm_defaultSenderId,@string/google_storage_bucket,@string/project_id,@string/google_api_key,@string/google_crash_reporting_api_key,@string/google_app_id,@string/default_android_client_id,@string/default_web_client_id">
-  <string name="gcm_defaultSenderId" translatable="false">969245168820</string>
-  <string name="google_storage_bucket" translatable="false">monsterrun-90ad1.firebasestorage.app</string>
-  <string name="project_id" translatable="false">monsterrun-90ad1</string>
+  <string name="gcm_defaultSenderId" translatable="false"></string>
+  <string name="google_storage_bucket" translatable="false"></string>
+  <string name="project_id" translatable="false"></string>
   <string name="google_api_key" translatable="false"></string>
   <string name="google_crash_reporting_api_key" translatable="false"></string>
   <string name="google_app_id" translatable="false"></string>
